--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,11 @@ td > input, th > input{
   width: 8vw;
   background-color: #121212;
   color: white;
+  font-size: 1em;
+}
+
+td > input, th > input:focus{
+  outline-color: #90ee02;
 }
 
 @media screen and (min-width: 700px){
