--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App{
-  font-size: calc(10px + 1vmin);
+  font-size: calc(12px + 1vmin)!important;
   text-align: center;
 }
 
@@ -11,9 +11,10 @@ th, td{
 td > input, th > input{
   padding: 0.5em;
   width: 8vw;
-  background-color: #121212;
+  background-image: linear-gradient(to bottom right, #1e1e1e, #121212);
   color: white;
   font-size: 1em;
+  border: 2px solid #121212;
 }
 
 td > input, th > input:focus{
@@ -30,4 +31,12 @@ table{
   border-collapse: collapse;
   max-width: 90vw;
   display: inline-table;
+}
+
+.g-chart, .g-chart > div{
+  width: 100%!important;
+}
+
+.chart > div{
+  display: inline-block;
 }
